--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="content">
         <div class="column large">
           <div class="lead-story">
-              <div class="image1">
+              <div class="image tuna">
                 <span>
                 Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."
                 </span>
@@ -34,7 +34,7 @@
                   <h2>Orca Spends Vacation at Land World Puget</h2>
                   <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
                 </div>
-                <div class="image2 earth-spins">
+                <div class="image earth-spins">
                   <span>Earth spins backwards for 2017</span>
                 </div>
               </div>
@@ -44,7 +44,7 @@
                   <h2>Burger for Breakfast: How Early is too Early?</h2>
                   <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
                 </div>
-                <div class="image2 earth-spins">
+                <div class="image camera">
                   <span>Research Shows Cameras Erase Memory</span>
                 </div>
               </div>
