Added more css to the third column

--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
         <div class="column small">
           <div class="third-story">
             <div class="image cookie">
-
+                <h4>NEWS BITES</h4>
             </div>
               <div class="news-bites">
-                <h3>NEWS BITES</h3>
-                <span class="bite">Cat Emoji Goes Viral</p>
-                <span class="bite">Buy Youtube Views</span>
+                <span class="bites">Cat Emoji Goes Viral</span>
+                <span class="bites">Buy Youtube Views</span>
                 <span class="bites">Home Business Advertising Ideas</span>
                 <span class="bites">Advertising Internet Online</span>
                 <span class="bites">Illustration in Marketing Materials</span>
@@ -94,4 +93,7 @@
       </div>
 
   </body>
+  <footer>
+
+  </footer>
 </html>
