Added footer, mostly

--- a/index.html
+++ b/index.html
@@ -86,14 +86,25 @@
                 <span class="bites">Advertising Internet Online</span>
                 <span class="bites">Illustration in Marketing Materials</span>
                 <span class="bites">Finally a Top Secret Way You Can</span>
-              </div>
-
+            </div>
           </div>
         </div>
       </div>
 
   </body>
   <footer>
+      <div class="logo-info">
+        <span class="mytimes"> My Times</span>
 
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>
+      </div>
+      <div class="copywrite">
+        <p>© 2016, My Times (A Division of Codecademy bite)</p>
+      </div>
   </footer>
 </html>
