Fixed the footer.

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 
   </body>
   <footer>
-      <div class="logo-info">
-        <span class="mytimes"> My Times</span>
-
+      <div class="info">
+        <span class="title"> My Times</span>
       <nav>
         <span><a href="#">World</a></span>
         <span><a href="#">U.S.</a></span>
